# search-engine

./: Dockerfile  README.md  main.py  pyproject.toml
src/: static.py
