[tool.poetry]
name = "search-engine"
version = "0.1.0"
description = "backend for search engine"
authors = ["porta_simmons <rpistsovfrm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = "^2.11.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
